# BD-2

./: .gitignore  Procfile  README.md  db.sqlite3  main.py  manage.py  pyproject.toml
accounts/: admin.py  apps.py  models.py  tests.py
accounts/admin/: __init__.py  admin.py  admin_evolucion_clinica.py  admin_paciente.py  admin_resultado_clinico.py  admin_usuario_sistema.py
accounts/admin_configs/: admin.py  admin_historia_clinica.py  admin_orden_medica.py  admin_personal_salud.py  admin_servicio.py  admin_usuario_sistema.py  apps.py
accounts/migrations/: 0001_initial.py  0002_gabinete_laboratorio_and_more.py  0003_remove_paciente_correo.py  0004_alter_expedienteclinico_id_gabinete_and_more.py  0005_citamedica.py  0006_rename_observaciones_historiaclinica_observaciones_ingreso_and_more.py  0007_hojaingreso_remove_historiaclinica_fecha_alta_and_more.py  0008_remove_ordenmedica_id_episodio_and_more.py
accounts/models/: __init__.py  evolucion_clinica.py  historia_clinica.py  orden_medica.py  paciente.py  personal_salud.py  resultado_clinico.py  servicio.py  usuario_sistema.py
proy_historial/: asgi.py  settings.py  urls.py  wsgi.py
