[project]
name = "proy-historial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.0.1",
    "django-extensions>=4.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "pydotplus>=2.0.2",
    "python-dotenv>=1.1.1",
    "whitenoise>=6.11.0",
]
